fix bug Student
- Fix lỗi chức năng lấy thời khóa biểu
- Fix lỗi chức năng lấy lịch thi

--- a/views/student/schedule.hbs
+++ b/views/student/schedule.hbs
@@ -38,9 +38,10 @@
                         <th>THỨ 4</th>
                         <th>THỨ 5</th>
                         <th>THỨ 6</th>
+                        <th>THỨ 7</th>
                     </tr>
                 </thead>
-                
+
                 <tbody>
                     {{#each listScheduleView}}
                     <tr>
@@ -56,7 +57,7 @@
                     </tr>
                     {{/each}}
                 </tbody>
-                
+
             </table>
         </div>
     </div>
