--- a/views/staff/survey.hbs
+++ b/views/staff/survey.hbs
@@ -69,7 +69,7 @@
 {{/if}}
 
 <div class="row">
-    <div class="col-xl-3 col-md-6 mb-4">
+    <div class="col-md-6">
         <div class="card border-left-primary shadow h-100 py-2">
             <div class="card-body">
                 <div class="row no-gutters align-items-center">
@@ -85,7 +85,7 @@
         </div>
     </div>
 
-    <div class="col-xl-3 col-md-6 mb-4">
+    <div class="col-md-6">
         <div class="card border-left-success shadow h-100 py-2">
             <div class="card-body">
                 <div class="row no-gutters align-items-center">
@@ -141,8 +141,8 @@
                         ({{this.percent.type3}}%)
                     </div>
                     <div class="mr-2">
-                        <i class="fas fa-circle text-warning"></i>75-100% : {{totalScore.quantity.type4}}
-                        ({{totalScore.percent.type4}}%)
+                        <i class="fas fa-circle text-warning"></i>75-100% : {{this.quantity.type4}}
+                        ({{this.percent.type4}}%)
                     </div>
                 </div>
             </div>
