--- a/views/student/reExamination.hbs
+++ b/views/student/reExamination.hbs
@@ -35,7 +35,7 @@
                         <th>MÔN HỌC</th>
                         <th>NỘI DUNG</th>
                         <th>PHẢN HỒI</th>
-                        <th>CHỈNH SỬA</th>
+                        <th>CHI TIẾT</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -98,12 +98,12 @@
     </div>
 </div>
 {{#each listReExaminationView}}
-<div class="modal fade" id="modalEditReExamination{{dataTarget}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-    aria-hidden="true">
+<div class="modal fade" id="modalEditReExamination{{dataTarget}}" tabindex="-1" role="dialog"
+    aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <form class="modal-content" action="/student/reExamination/edit" method="POST">
+        <div class="modal-content">
             <div class="modal-header text-center">
-                <h4 class="modal-title w-100 font-weight-bold">Chỉnh sửa</h4>
+                <h4 class="modal-title w-100 font-weight-bold">Chi tiết</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -111,18 +111,20 @@
             <div class="modal-body mx-3">
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-subjectName">Môn học</label>
-                    <input type="text" class="form-control validate" name="subjectID" id="subjectID" value="{{subjectID}}" readonly>
+                    <input type="text" class="form-control validate" name="subjectID" id="subjectID"
+                        value="{{subjectID}}" readonly>
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-note">Nội dung phúc khảo</label>
-                    <textarea name="content" class="form-control">{{content}}</textarea>
+                    <textarea name="content" class="form-control" readonly>{{content}}</textarea>
                 </div>
-                <input type="hidden" name="id" id="id" value="{{id}}">
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-note">Phản hồi</label>
+                    <textarea name="content" class="form-control" readonly>{{response}}</textarea>
+                </div>
+
             </div>
-            <div class="modal-footer d-flex justify-content-center">
-                <button class="btn btn-danger">Xác nhận</button>
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 {{/each}}
