--- a/views/student/resultTable.hbs
+++ b/views/student/resultTable.hbs
@@ -61,6 +61,31 @@
     </div>
 </div>
 
+<div class="card shadow mb-4">
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th style="text-align: center;">TRUNG BÌNH</th>
+                        <th style="text-align: center;">HỌC LỰC</th>
+                        <th style="text-align: center;">HẠNH KIỂM</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+
+                    <tr>
+                        <td style="text-align: center;">{{GPA}}</td>
+                        <td style="text-align: center;">{{classifyGPA}}</td>
+                        <td style="text-align: center;">{{conduct}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
 
 
 <div class="modal fade" id="modalReExaminationForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
